--- a/app/views/districts/index.html.erb
+++ b/app/views/districts/index.html.erb
@@ -15,15 +15,19 @@
     <% @districts.each do |district| %>
       <tr>
         <td><%= district.name %></td>
-        <td><%= district.city %></td>
+        <td><%= district.city.name %></td>
+
+        <% if can? :manage, District %>
         <td><%= link_to 'Show', district %></td>
         <td><%= link_to 'Edit', edit_district_path(district) %></td>
         <td><%= link_to 'Destroy', district, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
+<% if can? :manage, District %>
 <%= link_to 'New District', new_district_path %>
+<% end %>
