--- a/app/views/districts/show.html.erb
+++ b/app/views/districts/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>City:</strong>
-  <%= @district.city %>
+  <%= @district.city.name %>
 </p>
 
 <%= link_to 'Edit', edit_district_path(@district) %> |
