--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -4,6 +4,7 @@
   <strong>Name:</strong>
   <%= @status.name %>
 </p>
-
+<% if can? :manage, Status %>
 <%= link_to 'Edit', edit_status_path(@status) %> |
+<% end %>
 <%= link_to 'Back', statuses_path %>
