--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,1 +1,6 @@
 <h1> Welcome To HDS </h1>
+<ul>
+  <li><%= link_to "Cities", cities_path %></li>
+  <li><%= link_to "Districits", districts_path %></li>
+  <li><%= link_to "Statuses", statuses_path %></li>
+</ul>
