--- a/app/views/order_types/index.html.erb
+++ b/app/views/order_types/index.html.erb
@@ -2,26 +2,29 @@
 
 <table>
   <thead>
-    <tr>
-      <th>Name</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
+  <tr>
+    <th>Name</th>
+    <th></th>
+    <th></th>
+    <th></th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @order_types.each do |order_type| %>
+  <% @order_types.each do |order_type| %>
       <tr>
         <td><%= order_type.name %></td>
-        <td><%= link_to 'Show', order_type %></td>
-        <td><%= link_to 'Edit', edit_order_type_path(order_type) %></td>
-        <td><%= link_to 'Destroy', order_type, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if can? :manage, OrderType %>
+            <td><%= link_to 'Show', order_type %></td>
+            <td><%= link_to 'Edit', edit_order_type_path(order_type) %></td>
+            <td><%= link_to 'Destroy', order_type, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+        <% end %>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Order type', new_order_type_path %>
+<% if can? :manage, OrderType %>
+    <%= link_to 'New Order type', new_order_type_path %>
+<% end %>
