--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,4 +3,5 @@
   <li><%= link_to "Cities", cities_path %></li>
   <li><%= link_to "Districits", districts_path %></li>
   <li><%= link_to "Statuses", statuses_path %></li>
+  <li><%= link_to "Order Types", order_types_path %></li>
 </ul>
