--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -4,4 +4,5 @@
   <li><%= link_to "Districits", districts_path %></li>
   <li><%= link_to "Statuses", statuses_path %></li>
   <li><%= link_to "Order Types", order_types_path %></li>
+  <li><%= link_to "Customers", customers_path %></li>
 </ul>
