--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -11,6 +11,10 @@
         </div>
     <% end %>
 
+    <div style='width: 800px;'>
+      <div id="map" style='width: 800px; height: 400px;'></div>
+    </div>
+
     <div class="field">
       <%= f.label :lat %>
       <br>
