--- a/app/views/addresses/new.html.erb
+++ b/app/views/addresses/new.html.erb
@@ -1,3 +1,6 @@
+<script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>
+<script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>
+
 <h1>New address</h1>
 
 <%= render 'form' %>
@@ -34,5 +37,26 @@
             });
             return false;
         });
+
+
+        handler = Gmaps.build('Google');
+        handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
+            markers = handler.addMarkers([
+                {
+                    "lat": 22.755439,
+                    "lng": 46.209155,
+                    "picture": {
+                        "url": "https://addons.cdn.mozilla.net/img/uploads/addon_icons/13/13028-64.png",
+                        "width":  36,
+                        "height": 36
+                    },
+                    "infowindow": "hello!"
+                }
+            ]);
+            handler.bounds.extendWith(markers);
+            handler.fitMapToBounds();
+        });
     });
+
+
 </script>
