--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -1,3 +1,5 @@
+<script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>
+<script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>
 <%= form_for(@address) do |f| %>
     <% if @address.errors.any? %>
         <div id="error_explanation">
@@ -30,18 +32,18 @@
       <%= f.label :city_id %>
       <br>
       <%=
-     # f.select :city_id,options_for_select(@cities.collect { |city| [city.name, city.id] }, 1), {}, {id: 'cities_select'}
+          # f.select :city_id,options_for_select(@cities.collect { |city| [city.name, city.id] }, 1), {}, {id: 'cities_select'}
 
-    collection_select(:address, :city_id, @cities, :id, :name, {prompt: "Select a city", id:'cities_select'})
+          collection_select(:address, :city_id, @cities, :id, :name, {prompt: "Select a city", id: 'cities_select'})
 
       %>
-       </div>
+    </div>
     <div class="field">
       <%= f.label :district_id %>
       <br>
 
       <%= #f.select :district_id, options_for_select(@districts.collect { |district| [district.name, district.id] }, 1), {}, {id: 'districts_select'}
-          collection_select(:address, :district_id, @districts, :id, :name, {prompt: "Select a district", id:'districts_select'})
+          collection_select(:address, :district_id, @districts, :id, :name, {prompt: "Select a district", id: 'districts_select'})
       %>
 
     </div>
@@ -50,3 +52,86 @@
       <%= f.submit %>
     </div>
 <% end %>
+<script>
+    $(document).ready(function () {
+        // Dropdown Stuff.
+        $('#address_district_id').attr('disabled', true);
+        $('#address_city_id').change(function () {
+            $('#address_district_id').find('option')
+                    .remove()
+                    .end();
+            $.ajax({
+                type: "GET",
+                dataType: "json",
+                url: "/ajax/get_districts/" + $('#address_city_id').val(),
+                success: function (data) {
+                    $.each(data, function (index, element) {
+                        $('#address_district_id')
+                                .append($("<option></option>")
+                                        .attr("value", element.id)
+                                        .text(element.name));
+                    });
+                    $('#address_district_id').attr('disabled', false);
+                },
+                error: function (data) {
+
+                }
+            });
+            return false;
+        });
+        // Google Maps Stuff..
+        handler = Gmaps.build('Google');
+        handler.buildMap({ provider: {}, internal: {id: 'map'}}, function () {
+
+            var marker = new google.maps.Marker({
+                lat:  24.699682984040187,
+                lng:  46.72966003417969,
+                map: handler.getMap().map,
+                draggable: true
+            });
+
+            Gmaps.map.markers.push(marker);
+
+            var markerz = handler.addMarkers([
+                {
+                    "lat": 24.699682984040187,
+                    "lng": 46.72966003417969,
+                    "picture": {
+                        "url": "https://addons.cdn.mozilla.net/img/uploads/addon_icons/13/13028-64.png",
+                        "width": 36,
+                        "height": 36
+                    },
+                    "infowindow": "hello!"
+                }
+            ],
+                    {draggable: true},
+                    {clickable: true}
+            );
+
+
+            google.maps.event.addListener(marker, 'dragged', function (event) {
+                $('#address_lat').val(event.latLng.lat());
+                $('#address_lon').val(event.latLng.lng());
+            });
+
+            /*
+             google.maps.event.addListener(handler.getMap(), 'click', function (event) {
+             var latlong = document.getElementById("latlong");
+             //alert("Latitude: " + event.latLng.lat() + " " + ", longitude: " + event.latLng.lng());
+             $('#address_lat').val(event.latLng.lat());
+             $('#address_lon').val(event.latLng.lng());
+             });
+             */
+
+
+            handler.bounds.extendWith(markers);
+            handler.fitMapToBounds();
+            handler.getMap().setZoom(7);
+        });
+
+
+        // end document ready
+    });
+
+
+</script>
