--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,4 @@
 <h1>Listing users</h1>
-
 <table>
   <thead>
   <tr>
@@ -9,21 +8,18 @@
     <th></th>
   </tr>
   </thead>
-
   <tbody>
   <% @users.each do |user| %>
       <tr>
         <td><%= user.name %></td>
         <td><% user.roles.each do |r|  %><%= r.name %><% end %></td>
         <% if can? :manage,User %>
-        <td><%= link_to "Show","#" %> | <%= link_to "Edit","#" %> | <%= link_to "Delete","#" %>  </td>
+        <td><%= link_to "Show",user_path(user.id) %> | <%= link_to "Edit","#" %> | <%= link_to "Delete","#" %>  </td>
         <% end %>
       </tr>
   <% end %>
   </tbody>
 </table>
-
 <br>
 <% if can? :manage,User %>
-
 <% end %>
