--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,30 +1,25 @@
-<h1><%= @user.name %> 's info</h1>
-<% if can? :manage, User %>
-    <fieldset>
-      <%= form_for :user do |f| %>
-          <p>
-            <%= label_tag :email %>
-            <%= f.text_field :email %>
-          </p>
-          <p>
-            <%= label_tag :name %>
-            <%= f.text_field :name %>
-          </p>
-          <%= f.submit "Update Data" %>
-      <% end %>
-    </fieldset>
-    <fieldset>
-      <legend>User Roles</legend>
-      <%= form_tag('/users/grantRoles') do %>
-          <%= hidden_field_tag :id, @user.id %>
-          <% @roles.each do |role| %>
-              <%= hidden_field_tag(role.name, 0) %>
-
-              <%= check_box_tag role.name, 1, @user.has_role?(role.name) %>
-              <%= label_tag role.name %>
-              <br>
-          <% end %>
-          <%= submit_tag "Update User Privliges" %>
-      <% end %>
-    </fieldset>
+<%= form_for @user do |f| %>
+    <p>
+      <%= label_tag :email %>
+      <%= f.text_field :email %>
+    </p>
+    <p>
+      <%= label_tag :name %>
+      <%= f.text_field :name %>
+    </p>
+    <%= f.submit "Update Data" %>
 <% end %>
+<hr/>
+<h3>User Roles</h3>
+<%= form_tag('/users/grantRoles') do %>
+    <%= hidden_field_tag :id, @user.id %>
+    <% @roles.each do |role| %>
+        <%= hidden_field_tag(role.name, 0) %>
+
+        <%= check_box_tag role.name, 1, @user.has_role?(role.name) %>
+        <%= label_tag role.name %>
+        <br>
+    <% end %>
+    <%= submit_tag "Update User Privliges" %>
+<% end %>
+
