--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,10 +15,12 @@
       <tr>
         <td><%= user.name %></td>
         <td>
-          <% user.roles.each do |r| %><%= r.name %>
-          <% end %></td>
+          <% user.roles.each do |r| %>
+             <%= r.name %>
+          <% end %>
+        </td>
         <% if can? :manage, User %>
-            <td><%= link_to "Show", user_path(user.id) %> | <%= link_to "Edit", "#" %>
+            <td><%= link_to "Show", user_path(user.id) %> | <%= link_to "Edit", edit_user_path(user.id) %>
               | <%= link_to "Delete", "#" %>  </td>
         <% end %>
       </tr>
@@ -26,5 +28,3 @@
   </tbody>
 </table>
 <br>
-<% if can? :manage, User %>
-<% end %>
