--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -1,5 +1,3 @@
-<script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>
-<script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>
 <%= form_for(@address) do |f| %>
     <% if @address.errors.any? %>
         <div id="error_explanation">
@@ -14,7 +12,10 @@
     <% end %>
 
     <div style='width: 800px;'>
-      <div id="map" style='width: 800px; height: 400px;'></div>
+      <div id="map" style='width: 800px; height: 400px;'>
+
+
+      </div>
     </div>
 
     <div class="field">
@@ -48,6 +49,17 @@
 
     </div>
 
+    <div class="field">
+      <%= f.label :customer_id %>
+      <br>
+
+      <%= #f.select :district_id, options_for_select(@districts.collect { |district| [district.name, district.id] }, 1), {}, {id: 'districts_select'}
+          collection_select(:customer, :customer_id, @customers, :id, :name, {prompt: "Select a Customer", id: 'customers_select'})
+      %>
+
+    </div>
+
+
     <div class="actions">
       <%= f.submit %>
     </div>
@@ -79,55 +91,67 @@
             });
             return false;
         });
+
+
+        /*
+         *
+         *       var marker = handler.addMarkers([
+         {
+         "lat": 24.699682984040187,
+         "lng": 46.72966003417969,
+         "picture": {
+         "url": "https://addons.cdn.mozilla.net/img/uploads/addon_icons/13/13028-64.png",
+         "width": 36,
+         "height": 36
+         },
+         "infowindow": "hello!"
+         }
+         ],
+         {draggable: true},
+         {clickable: true}
+         );
+         * */
         // Google Maps Stuff..
+
+
         handler = Gmaps.build('Google');
-        handler.buildMap({ provider: {}, internal: {id: 'map'}}, function () {
+        handler.buildMap({
 
-            var marker = new google.maps.Marker({
-                lat:  24.699682984040187,
-                lng:  46.72966003417969,
-                map: handler.getMap().map,
-                draggable: true
-            });
-
-            Gmaps.map.markers.push(marker);
-
-            var markerz = handler.addMarkers([
-                {
-                    "lat": 24.699682984040187,
-                    "lng": 46.72966003417969,
-                    "picture": {
-                        "url": "https://addons.cdn.mozilla.net/img/uploads/addon_icons/13/13028-64.png",
-                        "width": 36,
-                        "height": 36
+                    provider: {
+                        zoom:6,
+                        center: new google.maps.LatLng(24.699682984040187, 46.72966003417969)
+                        // pass in other Google Maps API options here
                     },
-                    "infowindow": "hello!"
+                    internal: {
+                        id: 'map'
+                    }
+                },
+                function () {
+
+
+
+                    markers = handler.addMarkers([
+                        {
+                            "lat": 24.699682984040187,
+                            "lng": 46.72966003417969,
+                            "picture": {
+                                "url": "https://addons.cdn.mozilla.net/img/uploads/addon_icons/13/13028-64.png",
+                                "width": 36,
+                                "height": 36
+                            },
+                            "infowindow": "hello!"
+                        }
+                    ], {draggable: true});
+
+                    handler.bounds.extendWith(markers);
+
+
+
+
                 }
-            ],
-                    {draggable: true},
-                    {clickable: true}
-            );
 
 
-            google.maps.event.addListener(marker, 'dragged', function (event) {
-                $('#address_lat').val(event.latLng.lat());
-                $('#address_lon').val(event.latLng.lng());
-            });
-
-            /*
-             google.maps.event.addListener(handler.getMap(), 'click', function (event) {
-             var latlong = document.getElementById("latlong");
-             //alert("Latitude: " + event.latLng.lat() + " " + ", longitude: " + event.latLng.lng());
-             $('#address_lat').val(event.latLng.lat());
-             $('#address_lon').val(event.latLng.lng());
-             });
-             */
-
-
-            handler.bounds.extendWith(markers);
-            handler.fitMapToBounds();
-            handler.getMap().setZoom(7);
-        });
+        );
 
 
         // end document ready
