--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -6,5 +6,6 @@
   <li><%= link_to "Order Types", order_types_path %></li>
   <li><%= link_to "Customers", customers_path %></li>
   <li><%= link_to "Addresses", addresses_path %></li>
-  <li><%= link_to "Users", users_path%></li>
+  <li><%= link_to "Users", users_path %></li>
+  <li><%= link_to "Orders", orders_path %></li>
 </ul>
