--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -17,11 +17,11 @@
   <tbody>
     <% @orders.each do |order| %>
       <tr>
-        <td><%= order.customer %></td>
+        <td><%= order.customer.name %></td>
         <td><%= order.address %></td>
         <td><%= order.bill_number %></td>
         <td><%= order.note %></td>
-        <td><%= order.bill_image %></td>
+        <td><%= raw(link_to 'Download ',order.bill_image) %></td>
         <td><%= link_to 'Show', order %></td>
         <td><%= link_to 'Edit', edit_order_path(order) %></td>
         <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
