--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -21,7 +21,7 @@
         <td><%= order.address %></td>
         <td><%= order.bill_number %></td>
         <td><%= order.note %></td>
-        <td><%= raw(link_to 'Download ',order.bill_image) %></td>
+        <td><%= order.bill_image %></td>
         <td><%= link_to 'Show', order %></td>
         <td><%= link_to 'Edit', edit_order_path(order) %></td>
         <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
