Added Name Field To Addresses Model

--- a/app/views/addresses/_form.html.erb
+++ b/app/views/addresses/_form.html.erb
@@ -27,6 +27,12 @@
       <%= f.text_field :lon %>
     </div>
 
+    <div class="field">
+      <%= f.label :name %>
+      <br>
+      <%= f.text_field :name %>
+    </div>
+
     <div class="field" id="city_select">
       <%= f.label :city_id %>
       <br>
