--- a/app/views/addresses/index.html.erb
+++ b/app/views/addresses/index.html.erb
@@ -7,6 +7,7 @@
     <th>Lon</th>
     <th>City</th>
     <th>District</th>
+    <th>Name</th>
     <th></th>
     <th></th>
     <th></th>
@@ -20,6 +21,7 @@
         <td><%= address.lon %></td>
         <td><%= address.city.name %></td>
         <td><%= address.district.name %></td>
+        <td><%= address.name %></td>
         <% if can? :manage, Address %>
             <td><%= link_to 'Show', address %></td>
             <td><%= link_to 'Edit', edit_address_path(address) %></td>
