--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -29,13 +29,22 @@
 
         <p id="mobile"></p>
       </div>
-      
+
     </div>
     <div class="field">
       <%= f.label :address_id %>
       <br>
-      <%= collection_select(:order, :address_id, Address.all, :id, :lat) %>
+      <%=
+          #collection_select(:order, :address_id, Address.all, :id, :lat)
+      %>
     </div>
+
+    <div style='width: 800px;'>
+      <div id="map" style='width: 800px; height: 400px;'></div>
+    </div>
+
+
+
     <div class="field">
       <%= f.label :bill_number %>
       <br>
@@ -78,8 +87,12 @@
         return false;
     }
 
-    function search_for_user() {
+    function getMarkers(customer_id) {
 
+    }
+
+    function search_for_user() {
+        var customer_data = null;
         var num = $('#search_for_customer_mobile').val();
         console.log("Searching for " + num)
         $.ajax({
@@ -96,8 +109,9 @@
                     $('#mobile').text(data.mobile);
                     $('#order_customer_id').val(data.id);
                     console.log("Current ID : " + $('#order_customer_id').val());
-                    addresses_dropdown(data.id);
-                    $('#order_address_id').attr('disabled', false);
+                    //addresses_dropdown(data.id);
+                    //$('#order_address_id').attr('disabled', false);
+                    customer_data = data;
                 } else {
                     alert("There is no customer associated with this mobile number.")
                 }
@@ -106,16 +120,43 @@
                 alert("No Data");
             }
         });
-        return false;
+        return customer_data;
     }
 
     $(document).ready(function () {
+
+
+        function initialize() {
+            var mapOptions = {
+                zoom: 5,
+                center: new google.maps.LatLng(22.755439, 46.209155)
+            };
+
+            map = new google.maps.Map(document.getElementById('map'),
+                    mapOptions);
+        }
+
+        google.maps.event.addDomListener(window, 'load', initialize);
+
+
         // user info stuff
         $('#customer_data').attr('hidden', true);
-        $('#order_address_id').attr('disabled', true);
+        //$('#order_address_id').attr('disabled', true);
         // search for customer by mobile.
         $('#search_btn').click(function () {
-            search_for_user();
+            cd = search_for_user();
+
+            $.get('/ajax/get_addresses/' + cd.id, {}, function (res, resp) {
+                for (var i = 0, len = res.length; i < len; i++) {
+
+                    var marker = new google.maps.Marker({
+                        position: new google.maps.LatLng(res[i].lat, res[i].lon),
+                        title: res[i] + "",
+                        map:map
+                    });
+                }
+                //window.setTimeout(getMarkers,INTERVAL);
+            }, "json");
         });
     });
 </script>
