--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,34 +2,37 @@
 
 <table>
   <thead>
-    <tr>
-      <th>Customer</th>
-      <th>Address</th>
-      <th>Bill number</th>
-      <th>Note</th>
-      <th>Bill image</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
+  <tr>
+    <th>Customer</th>
+    <th>Address</th>
+    <th>Bill number</th>
+    <th>Note</th>
+    <th>Status</th>
+    <th></th>
+    <th></th>
+    <th></th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @orders.each do |order| %>
+  <% @orders.each do |order| %>
       <tr>
         <td><%= order.customer.name %></td>
-        <td><%= order.address %></td>
+        <td><%= order.address.name %></td>
         <td><%= order.bill_number %></td>
         <td><%= order.note %></td>
-        <td><%= order.bill_image %></td>
-        <td><%= link_to 'Show', order %></td>
-        <td><%= link_to 'Edit', edit_order_path(order) %></td>
-        <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= order.aasm_state %></td>
+        <% if can? :manage, Order %>
+            <td><%= link_to 'Show', order %></td>
+            <td><%= link_to 'Edit', edit_order_path(order) %></td>
+            <td><%= link_to 'Destroy', order, method: :delete, data: {confirm: 'Are you sure?'} %></td>
+        <% end %>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Order', new_order_path %>
+<% if can? :manage, Order %>
+    <%= link_to 'New Order', new_order_path %>
+<% end %>
