--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -6,7 +6,14 @@
 </p>
 
 <p>
+  <strong>Order Status:</strong>
+  <%= @order.aasm_state %>
+</p>
+
+<p>
   <strong>Address:</strong>
+  <%= @order.address.name %>
+  <br>
   <%= "#{@order.address.lat},#{@order.address.lon}" %>
 </p>
 
@@ -22,8 +29,43 @@
 
 <p>
   <strong>Bill image:</strong>
-  <%= @order.bill_image %> %>
+  <%= image_tag(@order.bill_image) %>
 </p>
+<% if can? :manage, Order %>
+    <%= link_to 'Click Here', "#", data: {toggle: "modal", target: "#myModal"} %>
 
-<%= link_to 'Edit', edit_order_path(@order) %> |
+    <%= link_to 'Edit', edit_order_path(@order) %> |
+<% end %>
 <%= link_to 'Back', orders_path %>
+
+<div class="modal fade" id="myModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title">Assign Order To Driver.</h4>
+      </div>
+      <div class="modal-body">
+
+        <%= select_tag "drivers", options_from_collection_for_select(@drivers, "id", "name") %>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" id="assignOrder_btn" class="btn btn-primary">Save changes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+<script>
+  $(document).ready(function(){
+
+      $('#assignOrder_btn').click(function(e){
+        // send the order id + driver id to ajax controller telling it
+        // to update the order status to assigned & associate the ids
+      });
+
+
+  });
+</script>
