Added DataTable Plugin to Ease the interaction with tables. Needs more styling .

--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -2,7 +2,7 @@
 <div class="page-header">
   <h1><%= t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
 </div>
-<table class="table table-striped">
+<table id="table">
   <thead>
   <tr>
     <th><%= model_class.human_attribute_name(:id) %></th>
@@ -37,3 +37,9 @@
                 new_city_path,
                 :class => 'btn btn-primary' %>
 <% end %>
+<script>
+    $(document).ready(function(){
+
+        $('#table').dataTable();
+    });
+</script>
