--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,7 +9,6 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require select2-bootstrap
+ *= require dataTables/bootstrap/3/jquery.dataTables.bootstrap
  *= require_tree .
-
  */
