--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Listing users</h1>
-<table>
+<table id="table">
   <thead>
   <tr>
     <th>Name</th>
@@ -27,4 +27,9 @@
   <% end %>
   </tbody>
 </table>
-<br>
+<script>
+    $(document).ready(function(){
+
+        $('#table').dataTable();
+    });
+</script>
